--- a/ribbon_edge_states/set_up_ribbon_ham.ipynb
+++ b/ribbon_edge_states/set_up_ribbon_ham.ipynb
@@ -28,7 +28,7 @@
     "# the terms between 2nd and the last 7 unit cells to be zero, and so on.\n",
     "# This is hard-coded. Maybe we can do it in a more elegant way.\n",
     "orb_cut = 10\n",
-    "def get_ribbon_ham(h0, orb_cut):\n",
+    "def get_ribbon_ham(h0, orb_cut, nwann=56):\n",
     "    h = h0.copy()\n",
     "    for i in range(1,orb_cut+1):\n",
     "        h[nwann*(i-1):nwann*i,-(orb_cut-i+1)*nwann:]=0.0\n",
@@ -83,14 +83,15 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
+     "ename": "KeyboardInterrupt",
      "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/s4/8x9zf7mn76x05kgp2knhz_k00000gn/T/ipykernel_66814/473430979.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mout_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'./'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmyham0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel_sc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhamilton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mk_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mefield_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/pyqmc_dev/lib/python3.9/site-packages/tbmodels/_tb_model.py\u001b[0m in \u001b[0;36mhamilton\u001b[0;34m(self, k, convention)\u001b[0m\n\u001b[1;32m   1121\u001b[0m                 \u001b[0mout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtmp_array\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1122\u001b[0m             )\n\u001b[0;32m-> 1123\u001b[0;31m             \u001b[0mH\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mtmp_array\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1124\u001b[0m         \u001b[0mH\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mH\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconjugate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1125\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mconvention\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -112,7 +113,7 @@
     "    with h5py.File(output_file, 'w') as f:\n",
     "        f.create_dataset(\"efield\", data=efield)\n",
     "        f.create_dataset(\"bands_chosen\", data = bands_chosen)\n",
-    "        for ik, ik1, ih zip(np.arange(nkpt), k1, myham0):\n",
+    "        for ik, ik1, ih in zip(np.arange(nkpt), k1, myham0):\n",
     "            ih_tmp = apply_efield(ih,efield,z_pos_sym)\n",
     "            h_ribbon = get_ribbon_ham(ih_tmp, orb_cut)\n",
     "            eigvals, eigvecs = np.linalg.eigh(h_ribbon)\n",
