added ribbon results with finite electric fields

--- a/ribbon_edge_states/set_up_ribbon_ham.ipynb
+++ b/ribbon_edge_states/set_up_ribbon_ham.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import tbmodels\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import h5py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
     "# in order to construct a hamiltonian for the ribbon, set the hopping terms between the 1st and the last 8 unit cells to be zero,\n",
     "# the terms between 2nd and the last 7 unit cells to be zero, and so on.\n",
     "# This is hard-coded. Maybe we can do it in a more elegant way.\n",
-    "orb_cut = 10\n",
+    "orb_cut = 4\n",
     "def get_ribbon_ham(h0, orb_cut, nwann=56):\n",
     "    h = h0.copy()\n",
     "    for i in range(1,orb_cut+1):\n",
@@ -38,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "nwann = 56\n",
-    "ribbon_width = 25\n",
-    "nkpt = 801\n",
+    "ribbon_width = 20\n",
+    "nkpt = 101\n",
     "\n",
     "wpath = f\"../tb_model/model_o{nwann}/\"\n",
     "\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,24 +80,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "out_path = './'\n",
     "myham0 = model_sc.hamilton(k=k_list)\n",
-    "efield_list = [0.0]"
+    "efield_list = [0.1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "h_diff = ih_tmp - ih"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "bands_chosen = np.arange(32*ribbon_width, 40*ribbon_width+1, 1)\n",
     "for efield in efield_list:\n",
-    "    output_file = f\"./data/ribbon_efield{efield}.hdf5\"\n",
+    "    output_file = f\"./data/ribbon_efield{efield}_w{ribbon_width}.hdf5\"\n",
     "    with h5py.File(output_file, 'w') as f:\n",
     "        f.create_dataset(\"efield\", data=efield)\n",
     "        f.create_dataset(\"bands_chosen\", data = bands_chosen)\n",
