--- a/ribbon_edge_states/get_edge_states_spreads.ipynb
+++ b/ribbon_edge_states/get_edge_states_spreads.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
     "              bbox_to_anchor=(1.05, 1), loc='upper left') \n",
     "\n",
     "\n",
-    "fig.savefig(f\"./figures/ribbon_dos_efield{efield}_efermi.pdf\", bbox_inches='tight')    "
+    "fig.savefig(f\"./figures/ribbon_dos_efields.pdf\", bbox_inches='tight')    "
    ]
   },
   {
